--- a/Sources/css/style.css
+++ b/Sources/css/style.css
@@ -1,17 +1,15 @@
-
-
 #kategoria {
   padding: 0px 0px 10px 0px;
   /*width: calc(25% - 30px);*/
-  -webkit-box-shadow: 1px 4px 9px 0px rgba(0,0,0,0.73);
-  box-shadow: 1px 4px 9px 0px rgba(0,0,0,0.73);
+  -webkit-box-shadow: 1px 4px 9px 0px rgba(0, 0, 0, 0.73);
+  box-shadow: 1px 4px 9px 0px rgba(0, 0, 0, 0.73);
 }
 
 #kategoria div {
   padding-left: 15px;
 }
 
-#kategoria div input{
+#kategoria div input {
   margin-bottom: 15px;
 }
 
@@ -32,13 +30,17 @@
   padding: 0px 15px;
 }
 
-header span, header h1, header h2 {
+header span,
+header h1,
+header h2 {
   display: inline;
 }
 
-header span img, a span img {
+header span img,
+a span img {
   width: 25px;
-  position: relative; top: 3px;
+  position: relative;
+  top: 3px;
 }
 
 a span img {
@@ -47,23 +49,22 @@ a span img {
 }
 
 #table-content {
-  height: 400px;
+  height: 410px;
   overflow-y: auto;
 }
 
-
-table.frontend-table tr, table.frontend-table th, table.frontend-table td {
+table.frontend-table tr,
+table.frontend-table th,
+table.frontend-table td {
   padding: 10px;
   border: 1px solid grey;
 }
-
 
 table.frontend-table th {
   background-color: #c0c0c0;
 }
 
-
-table.frontend-table tr:nth-child(2n+1) {
+table.frontend-table tr:nth-child(2n + 1) {
   background-color: #faebd7;
 }
 
@@ -71,8 +72,15 @@ table.detail_table {
   padding: 10px;
 }
 
+.detail_table td {
+  padding: 0 15px;
+}
 
-header{
+#detail-view {
+  margin-top: 30px;
+}
+
+header {
   background-color: #dcdcdc;
   padding: 5px;
   border: 1px solid #f5f5f5;
@@ -90,24 +98,23 @@ header{
   font-weight: bold;
 }
 
-.rejtett div, .rejtett header{
+.rejtett div,
+.rejtett header {
   display: none;
 }
 
-.rejtett{
+.rejtett {
   height: 300px;
   border: 1px solid #c0c0c0;
   width: 0px;
 }
 
-.megse{
+.megse {
   display: none;
 }
 
-
-
 .book-row {
- cursor: pointer;
+  cursor: pointer;
 }
 
 .book-img {
@@ -115,12 +122,8 @@ header{
   margin-right: 20px;
 }
 
-
-
 /* mobil nézet*/
 @media only screen and (max-width: 768px) {
-
-
   #tartalom {
     padding-left: 0px;
     width: 100%;
@@ -131,7 +134,4 @@ header{
     overflow-y: auto;
     height: 300px;
   }
-
-
-
 }
